eccomerce website done

--- a/ecommerce-website/thankyou.html
+++ b/ecommerce-website/thankyou.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Thank You – ShopSmart</title>
-  <link rel="stylesheet" href="../css/style.css"/>
+  <title>Thank You - ShopSmart</title>
+  <link rel="stylesheet" href="./css/style.css"/>
 </head>
 <body>
 
@@ -29,6 +29,6 @@
     <p>&copy; 2025 ShopSmart</p>
   </footer>
 
-  <script src="../js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
