--- a/ecommerce-website/index.html
+++ b/ecommerce-website/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ShopSmart - Home</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div id="alert-container"></div>
@@ -37,6 +37,6 @@
       <p>&copy; 2025 ShopSmart</p>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
